# CHIP8-Emu

./: CMakeLists.txt  README.md
docs/: Deps.txt  Specs.txt
inc/: chip8.h
src/: chip8.c  chip8.h  main.c
